@@ -4,6 +4,7 @@ Cacti CHANGELOG
 -bug#0000557: Changing filter value resulted in invalid page/row selection.
 -bug#0000572: Added $database_port to config.php
 -bug#0000570: Grammer edit for text about already up-to-date
+-bug#0000571: Misleading diagnositc error messages during install have been updated
 -bug#0000582: Ampersand present in graph template graph name causes xml import to fail
 -bug#0000585: Graphing fails using AREA/STACK/LINE/HRULE/VRULE without defined color
 -bug#0000596: Proper excape of ' in graph titles
